# axum-crud

./: .env  Cargo.toml  README.md  requests.http  server.rs
core/: handlers.rs  models.rs  repository.rs  responses.rs  serializers.rs  urls.rs
migrations/: 20240317214733_create_todo_table.up.sql
src/: handlers.rs  server.rs  urls.rs
